# docs/swagger.json
@@ -5075,7 +5075,9 @@
         "AdminProject": {
             "type": "object",
             "required": [
+                "color",
                 "createdAt",
+                "icon",
                 "memberCount",
                 "name",
                 "owner",
@@ -5083,7 +5085,13 @@
                 "uid"
             ],
             "properties": {
+                "color": {
+                    "type": "string"
+                },
                 "createdAt": {
+                    "type": "string"
+                },
+                "icon": {
                     "type": "string"
                 },
                 "memberCount": {
